# xedis

./: .envrc  .gitignore  .gitmodules  .rgignore  .yarnrc.yml  Cargo.toml  README.md  README.mdt  dev.lua.sh  index.d.ts  index.js  out.txt  package.json  run.sh  test.coffee  test.sh
.github/workflows/: CI.yml
coffee/: main.coffee
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
sh/: clippy.sh  dist.coffee  test.sh
src/: bin.rs  lib.rs  map.rs  val.rs
test/: R.coffee  c.coffee  lua.coffee  main.mjs  p.coffee  test.lua  xpendclaim.lua
