[package]
edition = "2021"
name = "w5_xedis"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
napi-derive = "2.13.0"
paste = "1.0.14"

[dependencies.fred]
# path = "./lib/fred.rs"
features = ["replicas", "rustls"]
version = "6.3.0"

[dependencies.napi]
path = "./lib/napi-rs/crates/napi"
version = "2.13.3"
default-features = false
features = ["napi8", "error_anyhow", "tokio_rt", "async"]

#version = "2.12.6"
[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
strip = true
